--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -135,7 +135,7 @@
                 <view class="course-font"> {{item.location}}</view>
               </view>
             </view>
-            <view class="scroll-view-bottom course-time">8:00~9:40 / 1-2节</view>
+            <view class="scroll-view-bottom course-time">{{item.start_time}}~{{item.end_time}} / {{item.section_start}}-{{item.section_end}}节</view>
           </view>
         </scroll-view>
       </block>
