校园卡消费记录

--- a/pages/cost/cost.wxml
+++ b/pages/cost/cost.wxml
@@ -3,14 +3,15 @@
   <view class="top">
     <view class="top-card">
       <view class="top-line">
-        <view class="tline-left">校园卡:{{ecard_id}}</view>
+        <view class="tline-left">校园卡</view>
         <view class="tline-right">{{status}}</view>
       </view>
       <view class="mid-line">
         <view class="mline-money">{{balance}}</view>
         <view class="mline-quancun">待圈存 {{unclaimed}}</view>
       </view>
-      <view class="bottom-line">6217 **** **** ***8 024</view>
+      <!-- <view class="bottom-line">6217 **** **** ***8 024</view> -->
+      <view class="bottom-line2">卡号:{{ecard_id}}</view>
     </view>
   </view>
   <view class="month-record">
