--- a/pages/cost/cost.wxss
+++ b/pages/cost/cost.wxss
@@ -38,6 +38,12 @@ page{
     letter-spacing: 5rpx;
 }
 
+.bottom-line2{
+    font-size: 30rpx;
+    padding-top: 10rpx;
+    letter-spacing: 5rpx;
+}
+
 .month-record{
   display: flex;
   flex-direction: column;
