--- a/pages/cost/cost.wxml
+++ b/pages/cost/cost.wxml
@@ -14,62 +14,23 @@
       <view class="bottom-line2">卡号:{{ecard_id}}</view>
     </view>
   </view>
-  <view class="month-record" wx:for="{{dataList}}" wx:for-item="budget">
+  <view class="month-record" wx:for="{{dataList}}">
     <view class="mrecord-header">
       <view class="mrecord-header-left" wx:if="{{index == 0}}">本月</view>
-      <view class="mrecord-header-left" wx:else>{{item.budget.month}}</view>
-      <view class="mrecord-header-right">充值 {{budget['budget']}} | 支出 {{item.budget.expense}}</view>
+      <view class="mrecord-header-left" wx:else>{{item.year}}年{{item.month}}月</view>
+      <view class="mrecord-header-right">充值 {{item.recharge}} | 支出 {{item.expense}}</view>
     </view>
-  </view>
-  <view class="month-record">
-    <view class="mrecord-header">
-      <view class="mrecord-header-left">本月</view>
-      <view class="mrecord-header-right">充值 0.00 | 支出 24.85</view>
-    </view>
-    <view class="mrecord-content">
+    <view class="mrecord-content" wx:for="{{item.data}}" wx:for-item="contentItem" wx:for-index="contentIndex">
       <view class="mrecord-content-item">
         <view class="mcitem-left">
-          <view class="event">琴湖17.18栋热水</view>
-          <view class="time">2017/03/05 17:39:05</view>
+          <view class="event">{{contentItem.location}}</view>
+          <view class="time">{{contentItem.date}}</view>
         </view>
-        <view class="mcitem-right">-0.06</view>
+        <view class="mcitem-right">{{contentItem.amount}}</view>
       </view>
     </view>
   </view>
-  <view class="month-record">
-    <view class="mrecord-header">
-      <view class="mrecord-header-left">2017年9月</view>
-      <view class="mrecord-header-right">充值 0.00 | 支出 24.85</view>
-    </view>
-    <view class="mrecord-content">
-      <view class="mrecord-content-item">
-        <view class="mcitem-left">
-          <view class="event">琴湖17.18栋热水</view>
-          <view class="time">2017/03/05 17:39:05</view>
-        </view>
-        <view class="mcitem-right">-0.06</view>
-      </view>
-    </view>
-    <view class="mrecord-content">
-      <view class="mrecord-content-item">
-        <view class="mcitem-left">
-          <view class="event">琴湖17.18栋热水</view>
-          <view class="time">2017/03/05 17:39:05</view>
-        </view>
-        <view class="mcitem-right">-0.06</view>
-      </view>
-    </view>
-    <view class="mrecord-content">
-      <view class="mrecord-content-item">
-        <view class="mcitem-left">
-          <view class="event">琴湖17.18栋热水</view>
-          <view class="time">2017/03/05 17:39:05</view>
-        </view>
-        <view class="mcitem-right">-0.06</view>
-      </view>
-    </view>
-  </view>
-  <view class="loadMore">
+  <view class="loadMore" bindtap="getMoreInfo">
     <view class="loadMore-content">点击加载更多</view>
   </view>
 </view>
