--- a/pages/course/course.wxml
+++ b/pages/course/course.wxml
@@ -5,12 +5,13 @@
 <!--holder为占位块，为了实现flex布局的效果  -->
   <view class="holder"></view>
   <view class="week">
-    <picker bindchange="bindPickerChange" value="{{index}}" range="{{weekList}}">
+    <picker bindchange="bindPickerChange" value="{{selectWeek}}" range="{{weekList}}">
       <view class="picker big">
-        {{weekList[index]}}
+        {{weekList[selectWeek]}}
       </view>
     </picker>
-    <view class="small">非本周</view>
+    <view class="small" wx:if="{{selectWeek != currentWeek - 1}}">非本周</view>
+    <view class="small" wx:else>本周</view>
   </view>
   <view class="tool">
     <image class="tool-icon" src="../../images/change.png" mode="aspectFit"></image>
@@ -21,35 +22,35 @@
 <view class="content">
   <view class="row-header">
     <view class="month">
-      <view class="monthnum ccenter">3</view>
+      <view class="monthnum ccenter">{{month}}</view>
       <view class="monthfont ccenter">月</view>
     </view>
     <view class="weektitle">
-      <view class="date ccenter">13</view>
+      <view class="date ccenter">{{mon}}</view>
       <view class="weekname ccenter">周一</view>
     </view>
     <view class="weektitle">
-      <view class="date ccenter">14</view>
+      <view class="date ccenter">{{tues}}</view>
       <view class="weekname ccenter">周二</view>
     </view>
     <view class="weektitle">
-      <view class="date ccenter">15</view>
+      <view class="date ccenter">{{wed}}</view>
       <view class="weekname ccenter">周三</view>
     </view>
     <view class="weektitle">
-      <view class="date ccenter">16</view>
+      <view class="date ccenter">{{thur}}</view>
       <view class="weekname ccenter">周四</view>
     </view>
     <view class="weektitle">
-      <view class="date ccenter">17</view>
+      <view class="date ccenter">{{fri}}</view>
       <view class="weekname ccenter">周五</view>
     </view>
     <view class="weektitle">
-      <view class="date ccenter">18</view>
+      <view class="date ccenter">{{sat}}</view>
       <view class="weekname ccenter">周六</view>
     </view>
     <view class="weektitle">
-      <view class="date ccenter">19</view>
+      <view class="date ccenter">{{sun}}</view>
       <view class="weekname ccenter">周日</view>
     </view>
   </view>
@@ -67,7 +68,13 @@
       <view class="num-dark ccenter">10</view>
       <view class="num-light ccenter">11</view>
     </view>
-    <view class="course">
+    <view class="course" wx:for="{{courseData}}" wx:for-item="dayCourse">
+      <view class='grid {{courseItem ? "grid-" + (courseItem.section_end - courseItem.section_start + 1) : "grid-1"}}' wx:for="{{dayCourse}}" wx:for-item="courseItem">
+        <view class='grid-content {{courseItem ? "lightblue" : "empty"}}'>{{courseItem.section_start}}</view>
+      </view>
+    </view>
+    
+    <!-- <view class="course">
       <view class="grid">
         <view class="grid-content lightblue">数据库原理@南山四阶梯</view>
       </view>
@@ -90,9 +97,9 @@
       </view>
       <view class="grid">
         <view class="grid-content lightred">概率论与数理统计1@逸夫楼-410</view>
-      </view>
+      </view> -->
       <!--9.1%为一个格子的高度  -->
-      <view class="grid" style="height:36.4%;">
+      <!-- <view class="grid" style="height:36.4%;">
         <view class="grid-content lightred">概率论与数理统计1@逸夫楼-410</view>
       </view>
     </view>
@@ -100,7 +107,7 @@
     <view class="course"></view>
     <view class="course"></view>
     <view class="course"></view>
-    <view class="course"></view>
+    <view class="course"></view> -->
   </view>
   <!--  底部工具栏  -->
   <view class="foot">
