初步完成,提交个小版本

--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -3,10 +3,11 @@
   <view class="logo_outer">
     <image src="../../images/logo.png" mode="aspectFit" class="logo"></image>
   </view>
-  <text class="version">当前版本0.1.1.1.20170904_Beat</text>
+  <text class="version">当前版本{{version}}</text>
+  <text class="version">{{versionInfo}}</text>
   <text class="developer">拱拱-小程序 的诞生离不开</text>
   <text class="developer">@三翼工作室 @翼工坊\n@三翼开发者中心</text>
-  <button >我要反馈</button>
+  <button class="button">我要反馈</button>
   <text class="link" bindtap="setClipboard">访问官网</text>
   <text class="copyright">Copyright © 2004-2017 湘潭大学三翼工作室</text>
 </view>
