--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -3,9 +3,9 @@
   <view class="top">
     <image class="back" src="../../images/back.png" mode="aspectFill"></image>
     <view class="mygg">　　　　</view>
-    <image class="headimg" src="../../images/img.jpg" mode="aspectFill"></image>
-    <view class="username">翼宝321</view>
-    <view class="userid">2015551509</view>
+    <image class="headimg" src="{{userImg}}" mode="aspectFill"></image>
+    <view class="username">{{nickName}}</view>
+    <view class="userid">{{sid}}</view>
   </view>
   <view class="mid">
     <view class="outer">
@@ -13,9 +13,9 @@
       <view class="line-in"></view>
       <view class="content">
         <view class="set-item0">图书到期短信提醒
-          <switch checked color="#5fb0e8" />
+          <switch bindchange="libraryNotice" checked="{{libraryNoticeStatus == 1}}" color="#5fb0e8" />
         </view>
-        <view class="set-item">其他设置</view>
+        <!-- <view class="set-item">其他设置</view> -->
       </view>
     </view>
   </view>
@@ -27,8 +27,9 @@
       <view class="content">
         <view class="set-item">创建快捷方式</view>
         <navigator class="set-item" url="/pages/about/about">关于拱拱</navigator>
-        <view class="set-item">重新绑定三翼通行证</view>
+        <view class="set-item" bindtap="reBind">重新绑定三翼通行证</view>
         <view class="set-item">我的微信帐号</view>
+        <view class="set-item" bindtap="loginOut">退出登录</view>
       </view>
     </view>
   </view>
