--- a/pages/about/about.wxss
+++ b/pages/about/about.wxss
@@ -34,10 +34,15 @@ page {
   line-height: 44rpx;
 }
 
-button{
+.button{
   width: 80%;
   margin-top: 80rpx;
   background-color: #63ba63;
+  color: #fff;
+}
+
+.button-hover{
+  background-color: #5dae5d;
   color: #fff;
 }
 
