--- a/pages/grade/grade.wxml
+++ b/pages/grade/grade.wxml
@@ -18,13 +18,13 @@
       <view class="tblock-key">平均成绩</view>
     </view>
   </view>
-  <view wx:if="{{status == 0}}">
+  <view wx:if="{{pageStatus == 0}}">
     <view class="tip">
       <text class="tip-up">拱拱正在努力的加载数据</text>
       <text class="tip-down">请稍微等一下哦</text>
     </view>
   </view>
-  <view wx:elif="{{status == 1}}">
+  <view wx:elif="{{pageStatus == 1}}">
     <view class="tip">
       <text class="tip-up">拱拱猜你应该是大一的新生</text>
       <text class="tip-down">还没有考试成绩哦</text>
