--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -11,7 +11,7 @@
     </view>
     <radio-group bindchange="radioChange" class="radio" name="loginType">
       <label>
-        <radio value="1" />信息门户
+        <radio value="1" disabled/>信息门户
       </label>
       <label>
         <radio value="2" checked='true' />通行证/教务系统
